[gd_scene load_steps=12 format=3 uid="uid://bg1hhtbld51uo"]

[ext_resource type="Texture2D" uid="uid://duqkvwv5qu3b2" path="res://assets/UI/itemShop.png" id="1_skwrv"]
[ext_resource type="Texture2D" uid="uid://deob0fy2pod4m" path="res://assets/UI/itemShopClicked.png" id="2_hg6o2"]
[ext_resource type="Script" path="res://scripts/itemShop.gd" id="3_barlp"]
[ext_resource type="Texture2D" uid="uid://tbqgtm5wqn0p" path="res://assets/Items/alcohol.png" id="4_jt5nh"]
[ext_resource type="Theme" uid="uid://cnfo6fcyj5pcq" path="res://assets/Textures/itemName.tres" id="5_nlke6"]
[ext_resource type="Theme" uid="uid://6h8smvrr5cte" path="res://assets/Textures/itemDes.tres" id="6_oquch"]
[ext_resource type="Texture2D" uid="uid://41n26cc5ue5v" path="res://assets/UI/coinNum.png" id="7_4r1bc"]
[ext_resource type="FontFile" uid="uid://dnjpjdgtnepol" path="res://assets/Fonts/PixelifySans-VariableFont_wght.ttf" id="8_apbe5"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_mdeth"]
bg_color = Color(0.0646965, 0.0646965, 0.0646965, 0.705882)
corner_radius_bottom_right = 30
corner_radius_bottom_left = 30

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_ffesx"]

[sub_resource type="Theme" id="Theme_va4i5"]
Label/colors/font_color = Color(1, 1, 1, 1)
Label/colors/font_outline_color = Color(0, 0, 0, 1)
Label/colors/font_shadow_color = Color(0, 0, 0, 0)
Label/constants/line_spacing = 6
Label/constants/outline_size = -3
Label/constants/shadow_offset_x = 1
Label/constants/shadow_offset_y = 1
Label/constants/shadow_outline_size = 1
Label/font_sizes/font_size = 25
Label/fonts/font = ExtResource("8_apbe5")
Label/styles/normal = SubResource("StyleBoxEmpty_ffesx")

[node name="itemShop" type="TextureButton"]
offset_right = 170.0
offset_bottom = 100.0
texture_normal = ExtResource("1_skwrv")
texture_pressed = ExtResource("2_hg6o2")
texture_hover = ExtResource("1_skwrv")
texture_disabled = ExtResource("1_skwrv")
stretch_mode = 0
script = ExtResource("3_barlp")

[node name="itemIcon" type="TextureRect" parent="."]
layout_mode = 0
offset_left = 7.0
offset_top = 20.0
offset_right = 111.0
offset_bottom = 124.0
texture = ExtResource("4_jt5nh")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 13
anchor_left = 0.5
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -39.5
offset_right = 158.5
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2

[node name="itemName" type="Label" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme = ExtResource("5_nlke6")
text = "itemName"

[node name="profitTag" type="Label" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme = ExtResource("6_oquch")
theme_override_font_sizes/font_size = 20
text = "profit/hr:"
vertical_alignment = 1

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="Coin" type="TextureRect" parent="MarginContainer/VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(20, 20)
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 4
texture = ExtResource("7_4r1bc")
expand_mode = 2
stretch_mode = 4

[node name="itemProfit" type="Label" parent="MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/shadow_offset_x = 0
theme_override_font_sizes/font_size = 30
text = "200k"

[node name="Panel" type="Panel" parent="."]
layout_mode = 2
offset_left = 6.0
offset_top = 137.0
offset_right = 321.0
offset_bottom = 190.0
theme_override_styles/panel = SubResource("StyleBoxFlat_mdeth")

[node name="MarginContainer2" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 1.0
offset_top = -48.0
offset_right = -7.0
grow_horizontal = 2
grow_vertical = 0
theme_override_constants/margin_left = 40
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer2"]
layout_mode = 2
theme_override_constants/separation = 80

[node name="itemLevel" type="Label" parent="MarginContainer2/HBoxContainer"]
layout_mode = 2
theme = SubResource("Theme_va4i5")
theme_override_font_sizes/font_size = 30
text = "lvl 9"
horizontal_alignment = 1
vertical_alignment = 1

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer2/HBoxContainer"]
layout_mode = 2

[node name="Coin" type="TextureRect" parent="MarginContainer2/HBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(20, 20)
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 4
texture = ExtResource("7_4r1bc")
expand_mode = 2
stretch_mode = 4

[node name="itemCost" type="Label" parent="MarginContainer2/HBoxContainer/HBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 34
text = "200k"
horizontal_alignment = 1
vertical_alignment = 1
